traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:2: error: not found: value a
override def run() {baisseBrosse();while(!a){ {if (estFaceMur() && y==0){gauche();avance();gauche();y=1};if(estFaceMur()&& y==1){droite();avance();droite();y=0};else {avance()}};baisseBrosse()
                                          ^